# debruijn

./: .gitignore  .stylish-haskell.yaml  Makefile  cabal.haskell-ci  cabal.project
.github/workflows/: haskell-ci.yml
bounded-evaluation/: backup.hs  bounded-evaluation.cabal
bounded-evaluation/src/: BoundedEvaluation.hs
bounded-evaluation/src/BoundedEvaluation/: Base.hs  Haskell.hs  Pretty.hs  Term.hs  Traditional.hs
bounded-evaluation/tests/: bounded-evaluation-tests.hs  nanott-tests.hs
debruijn/: CHANGELOG.md  debruijn.cabal
debruijn-common/src/: DeBruijn.hs  TrustworthyCompat.hs
debruijn-common/src/DeBruijn/: Ctx.hs  Lte.hs  Ren.hs  Sub.hs  Wk.hs
debruijn-safe/: debruijn-safe.cabal  src-common
debruijn-safe/src/DeBruijn/: Add.hs  Env.hs  Idx.hs  Lvl.hs  RenExtras.hs  Size.hs
debruijn/src/DeBruijn/: Add.hs  Env.hs  Idx.hs  Lvl.hs  RenExtras.hs  Size.hs
debruijn/src/DeBruijn/Internal/: Add.hs  Env.hs  Idx.hs  Lvl.hs  Size.hs
debruijn/tests/: debruijn-tests.hs
nanott/: nanott.cabal
nanott/src/: NanoTT.hs
nanott/src/NanoTT/: Base.hs
nanott/tests/: nanott-tests.hs
patmat/: patmat.agda  patmat.cabal
patmat/src/: Binder.hs  Constructor.hs  Name.hs  PatMat.hs  Path.hs
poritt/: poritt.cabal
poritt/agda/: Desc.agda  Eta.agda
poritt/examples/: bool.ptt  bool.stdout  church-nat.ptt  church-nat.stdout  descriptions.ptt  descriptions.stdout  eta.ptt  eta.stdout  hasty.ptt  hasty.stdout  identity.ptt  identity.stdout  info.ptt  info.stdout  inline.ptt  inline.stdout  labels.ptt  labels.stdout  leibniz.ptt  leibniz.stdout  let.ptt  let.stdout  list.ptt  list.stdout  macros.ptt  macros.stdout  nat.ptt  nat.stdout  pi.ptt  pi.stdout  sigma.ptt  sigma.stdout  simpl.ptt  simpl.stdout  ski.ptt  ski.stdout  staging-power.ptt  staging-power.stdout  staging.ptt  staging.stdout  (+4 more)
poritt/examples/errors/: error-app-not-fun.ptt  error-app-not-fun.stdout  error-arr-not-u.ptt  error-arr-not-u.stdout  error-conv-01.ptt  error-conv-01.stdout  error-conv-02.ptt  error-conv-02.stdout  error-infer-lambda.ptt  error-infer-lambda.stdout  error-lam-not-pi.ptt  error-lam-not-pi.stdout  error-not-in-scope.ptt  error-not-in-scope.stdout  error-parse.ptt  error-parse.stdout  error-pi-not-u.ptt  error-pi-not-u.stdout  error-redefine.ptt  error-redefine.stdout  error-type.ptt  error-type.stdout  error-u-not-u.ptt  error-u-not-u.stdout
poritt/examples/lib/: bool.ptt  bool.stdout  leibniz.ptt  leibniz.stdout  list.ptt  list.stdout  nat.ptt  nat.stdout  sigma.ptt  sigma.stdout
poritt/exe/: poritt.hs
poritt/src/: NanoTT.hs
poritt/src/PoriTT/: Base.hs  Builtins.hs  Builtins.hs-boot  Conv.hs  Elab.hs  Eval.hs  Eval.hs-boot  Global.hs  Global.hs-boot  Info.hs  Lexer.hs  Lint.hs  Loc.hs  Macro.hs  Main.hs  Name.hs  Nice.hs  Norm.hs  Opts.hs  PP.hs  Parser.hs  Quote.hs  Raw.hs  Rename.hs  Simpl.hs  Stage.hs  Term.hs  Used.hs  Value.hs  Well.hs
poritt/tests/: poritt-tests.hs
poritt/vim/: README
poritt/vim/ftplugin/: poritt.vim
poritt/vim/syntax/: poritt.vim
